# php-couchbase

./: .clang-format  .gitignore  CMakeLists.txt  README.md  bucket.c  bucket.h  cas.c  cas.h  cbft.c  cluster.c  cluster.h  config.m4  config.w32  couchbase.c  couchbase.h  counter.c  datainfo.h  docfrag.c  docfrag.h  durability.c  exception.c  exception.h  genphpfile.sh  get.c  http.c  log.c  log.h  metadoc.c  metadoc.h  n1ix_create.c  n1ix_drop.c  n1ix_list.c  n1ix_spec.c  n1ix_spec.h  n1ql.c  opcookie.c  opcookie.h  package.xml  package2.xml  paramparser.c  (+13 more)
api/: couchbase.php  toplevel.php
contrib/: php_array.h
examples/api/: couchbase.AnalyticsQuery.php  couchbase.Authenticator.php  (+7 more)
integration/: BucketManager.php  CollectionManager.php  CrossBucketN1qlQueryTest.php  DnsSrvTest.php  MockTest.php  QueryIndexManager.php  SearchIndexManager.php  SearchTest.php  UserManager.php  ViewIndexManager.php
stub/: CouchbaseBucket.class.php  CouchbaseBucketManager.class.php  CouchbaseCluster.class.php  CouchbaseClusterManager.class.php  CouchbaseMutateInBuilder.class.php  CouchbaseN1qlQuery.class.php  CouchbaseSearchQuery.class.php  default_transcoder.php
tests/: AliasesTest.php  BucketManagerTest.php  BucketTest.php  ClusterManagerTest.php  ClusterTest.php  CouchbaseMock.php  CouchbaseTestCase.php  DatastructuresTest.php  ExpiryTest.php  N1qlQueryTest.php  SearchQueryTest.php  TranscoderTest.php  ViewQueryTest.php
xtests/: AliasesTest.php  BucketManagerTest.php  BucketTest.php  ClusterTest.php  DatastructuresTest.php  TranscoderEncodingTest.php  TranscoderTest.php
(+116 files in other folders)
